--- a/.gitignore
+++ b/.gitignore
@@ -70,6 +70,8 @@ src/client/app/shared/config/env.config.js.map
 .env.development.local
 .env.test.local
 .env.production.local
+.env.development
+.env.production
 
 npm-debug.log*
 yarn-debug.log*
