--- a/package.json
+++ b/package.json
@@ -61,7 +61,12 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js"
+    "test": "node scripts/test.js",
+    "lint": "npm-run-all lint:js lint:scss",
+    "lint:js": "eslint .",
+    "lint:js:fix": "eslint . --fix",
+    "lint:scss": "sass-lint -c .sass-lint.yml -v -q",
+    "lint:scss:fix": "sass-lint-auto-fix -c .sass-lint.yml"
   },
   "eslintConfig": {
     "extends": "react-app"
