--- a/package.json
+++ b/package.json
@@ -3,12 +3,16 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "engines": {
+    "node": ">=10.0.0"
+  },
   "dependencies": {
     "compression": "^1.7.3",
     "cors": "^2.8.5",
     "dotenv-safe": "^6.1.0",
     "express": "^4.16.4",
     "morgan": "^1.9.1",
+    "redis": "^2.8.0",
     "request": "^2.88.0",
     "request-promise": "^4.2.2",
     "winston": "^3.1.0"
@@ -19,11 +23,16 @@
     "eslint-plugin-dependencies": "^2.4.0",
     "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-node": "^8.0.1",
+    "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-standard": "^4.0.0",
-    "nodemon": "^1.18.9"
+    "nodemon": "^1.18.9",
+    "prettier": "^1.16.4"
   },
   "scripts": {
+    "lint": "eslint src",
+    "lint:fix": "eslint src --fix",
+    "start": "node src",
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "nodemon src"
   },
