dockerized and configured ci

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
-API_ROUTE==''
-LOG_LEVEL==''
-PORT==''
+API_ROUTE=/api
+LOG_LEVEL=
+PORT=8000
+REDIS_HOST=''
 TAG_SEARCH_API_PROTOCOL=''
 TAG_SEARCH_API_HOSTNAME=''
 TAG_SEARCH_API_PATHNAME=''
