--- a/client/package.json
+++ b/client/package.json
@@ -31,6 +31,7 @@
     "jest-pnp-resolver": "1.0.1",
     "jest-resolve": "23.6.0",
     "mini-css-extract-plugin": "0.4.3",
+    "moment": "^2.24.0",
     "node-sass": "^4.11.0",
     "optimize-css-assets-webpack-plugin": "5.0.1",
     "pnp-webpack-plugin": "1.1.0",
@@ -43,6 +44,7 @@
     "react": "^16.7.0",
     "react-addons-css-transition-group": "^15.6.2",
     "react-app-polyfill": "^0.2.0",
+    "react-custom-scrollbars": "^4.2.1",
     "react-dev-utils": "^7.0.1",
     "react-dom": "^16.7.0",
     "react-redux": "^6.0.0",
