--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,7 @@
     "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-standard": "^4.0.0",
+    "jest": "^24.8.0",
     "nodemon": "^1.18.9",
     "prettier": "^1.16.4"
   },
@@ -35,6 +36,11 @@
     "start": "node src",
     "test": "echo \"Error: no test specified\" && exit 0",
     "watch": "nodemon src"
+  },
+  "jest": {
+    "testMatch": [
+      "**/?(*.)(spec|test).js"
+    ]
   },
   "author": "",
   "license": "ISC"
