added backend testing

--- a/server/.env.example
+++ b/server/.env.example
@@ -1,9 +1,5 @@
-API_ROUTE=/api
-PORT=8000
-REDIS_HOST=''
-TAG_SEARCH_API_PROTOCOL=''
-TAG_SEARCH_API_HOSTNAME=''
-TAG_SEARCH_API_PATHNAME=''
-TAG_SEARCH_TOP_PAYLOAD_SHAPE=''
+MOCKED_RESPONSE=''
+MOCKED_PARSED_DATA=''
 TAG_SEARCH_MORE_PAYLOAD_SHAPE=''
 TAG_SEARCH_NODE_SHAPE=''
+TAG_SEARCH_TOP_PAYLOAD_SHAPE=''
