--- a/server/package.json
+++ b/server/package.json
@@ -28,13 +28,16 @@
     "eslint-plugin-standard": "^4.0.0",
     "jest": "^24.8.0",
     "nodemon": "^1.18.9",
-    "prettier": "^1.16.4"
+    "prettier": "^1.16.4",
+    "redis-mock": "^0.44.0",
+    "supertest": "^4.0.2"
   },
   "scripts": {
     "lint": "eslint src",
     "lint:fix": "eslint src --fix",
     "start": "node src",
-    "test": "echo \"Error: no test specified\" && exit 0",
+    "test": "NODE_ENV=test jest",
+    "test:watch": "NODE_ENV=test jest --watch",
     "watch": "nodemon src"
   },
   "jest": {
