modify deployment and remove s3

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,24 +9,16 @@ script:
   - docker run --env MOCKED_RESPONSE --env MOCKED_PARSED_DATA --env TAG_SEARCH_MORE_PAYLOAD_SHAPE --env TAG_SEARCH_NODE_SHAPE --env TAG_SEARCH_TOP_PAYLOAD_SHAPE lyndonoc/hashrator-server npm run test
 
 after_success:
+  - docker build -t lyndonoc/hashrator-client -f ./client/Dockerfile ./client
+  - docker build -t lyndonoc/hashrator-nginx -f ./nginx/Dockerfile ./nginx
   - docker build -t lyndonoc/hashrator-server -f ./server/Dockerfile ./server
   - echo $DOCKER_PASSWORD | docker login --username $DOCKER_USERNAME --password-stdin
+  - docker push lyndonoc/hashrator-client
+  - docker push lyndonoc/hashrator-nginx
   - docker push lyndonoc/hashrator-server
 
-before_deploy:
-  - cd ./client && npm install && npm run build && cd ../
 
 deploy:
-  - provider: s3
-    access_key_id:
-      secure: "$AWS_ACCESS_KEY"
-    secret_access_key:
-      secure: "$AWS_SECRET_KEY"
-    bucket: "hashrator"
-    acl: public_read
-    skip_cleanup: true
-    local_dir: "./client/build"
-    region: us-east-1
   - provider: elasticbeanstalk
     access_key_id:
       secure: "$AWS_ACCESS_KEY"
@@ -34,6 +26,6 @@ deploy:
       secure: "$AWS_SECRET_KEY"
     region: "us-east-1"
     app: "hashrator"
-    env: "Hashrator-env"
+    env: "Hashrator-env-1"
     bucket_name: "elasticbeanstalk-us-east-1-383455664321"
     bucket_path: "hashrator"
