--- a/client/package.json
+++ b/client/package.json
@@ -134,5 +134,6 @@
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-react": "^7.11.1",
     "sass-lint": "^1.12.1"
-  }
+  },
+  "proxy": "http://localhost:8000"
 }
